[gd_scene load_steps=2 format=3 uid="uid://cpdfwcdf3id5i"]

[ext_resource type="Script" uid="uid://c4jec67iolqvg" path="res://scenes/obstacle_spawner/obstacle_spawner.gd" id="1_7248h"]

[node name="ObstacleSpawner" type="Node"]
script = ExtResource("1_7248h")

[node name="ObstacleSpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="ObstacleSpawnTimer" to="." method="_on_obstacle_spawn_timer_timeout"]
